@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  24 Jan 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Dependant services are restarted correctly when the restarted
+    service is started and not inactive, #120154.
+
   21 Jan 2006; Roy Marples <uberlord@gentoo.org>:
 
     Ensure that CRITICAL_SERVICES are in the boot runlevel, #117912.
